# goit-pythonweb-hw-10

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
