[project]
name = "goit-pythonweb-hw-10"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleksandr",email = "burtovyi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jose (>=1.0.0,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "cloudinary (>=1.43.0,<2.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.13.1,<0.14.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
